<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <Button
            android:id="@+id/freeze_ui_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freeze_ui_btn"/>

        <Button
            android:id="@+id/download_in_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_in_ui_btn"/>

        <Button
            android:id="@+id/show_ip_thread_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ip_thread_btn"/>

        <Button
            android:id="@+id/services_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_btn"/>

        <Button
            android:id="@+id/async_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/async_task_btn"/>

        <Button
            android:id="@+id/rates_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rates_btn"/>

    </LinearLayout>
</ScrollView>