<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <Button
            android:id="@+id/show_ip_async_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ip_async_task_btn"/>

        <Button
            android:id="@+id/show_ip_weak_async_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ip_weak_async_task_btn"/>

        <TextView
            android:id="@+id/ip_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="0.0.0.0"/>

        <Button
            android:id="@+id/clear_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_ip"/>

    </LinearLayout>
</ScrollView>